--- a/.github/workflows/wheel.yml
+++ b/.github/workflows/wheel.yml
@@ -22,10 +22,24 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
+      shell: cmd
       run: |
         python -m venv venv
+        .\venv\Scripts\activate.bat
         python -m pip install --upgrade pip
         pip install openvino-python==2020.1.33 --extra-index-url=https://masamitsu-murase.github.io/openvino-python/simple/
-        pip install torch==1.5.0+cpu torchvision==0.6.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
         pip install wheel
+        pip install torch==1.5.0+cpu torchvision==0.6.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
         pip freeze
+    - name: Build package
+      shell: cmd
+      env:
+        OPENCV_PATH: '${{ github.workspace }}\ngransac\ext\opencv_4.2.0_openvino'
+        VC_PATH: 'C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build'
+        VC_CPU: amd64
+      run: |
+        call "%VC_PATH%\vcvarsall.bat" %VC_CPU%
+        .\venv\Scripts\activate.bat
+        echo %OPENCV_PATH%
+        cd ngransac\ngransac
+        python setup.py bdist_wheel
