--- a/.github/workflows/wheel.yml
+++ b/.github/workflows/wheel.yml
@@ -25,7 +25,7 @@ jobs:
       shell: cmd
       run: |
         python -m venv venv
-        .\venv\Scripts\activate.bat
+        call .\venv\Scripts\activate.bat
         python -m pip install --upgrade pip
         pip install openvino-python==2020.1.33 --extra-index-url=https://masamitsu-murase.github.io/openvino-python/simple/
         pip install wheel
@@ -39,7 +39,7 @@ jobs:
         VC_CPU: amd64
       run: |
         call "%VC_PATH%\vcvarsall.bat" %VC_CPU%
-        .\venv\Scripts\activate.bat
+        call .\venv\Scripts\activate.bat
         echo %OPENCV_PATH%
         cd ngransac\ngransac
         python setup.py bdist_wheel
